fixed body width overflow

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -23,6 +23,7 @@ body {
 body {
   @apply antialiased	;
   width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
 
   font-family: "Sora", sans-serif;
